<resources>
    <string name="app_name">MathGame</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="loading">Loading</string>
    <string name="addition">\ +\ </string>
    <string name="subtraction">\ -\ </string>
    <string name="multiplication">\ x\ </string>
    <string name="division">\ /\ </string>
    <string name="equals">\ =\ </string>
    <string name="score">Score :</string>
    <string name="remainTime">Time :</string>
    <string name="ok">OK</string>
    <string name="add">Addition</string>
    <string name="sub">Subtraction</string>
    <string name="mul">Multiplication</string>
    <string name="div">Division</string>
    <string name="operations">OPERATIONS</string>
    <string name="values">VALUES</string>
    <string name="time">Time</string>
    <string name="minVal">Min Random Value</string>
    <string name="maxVal">Max Random Value</string>
    <string name="settings">Settings</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">EASY</string>
    <string name="tab_text_2">MEDIUM</string>
    <string name="tab_text_3">HARD</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_high_scores">High Scores</string>
</resources>
