<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/operations"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="30dp">

            <Switch
                android:id="@+id/addSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/add"
                android:textAlignment="textStart"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="96dp">

            <Switch
                android:id="@+id/subSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/sub"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/mulSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/mul"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/divSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/div"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aldrich"
                android:text="@string/values"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/time"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/timeSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="120" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/minVal"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/minValEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/maxVal"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/maxValEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="4"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/applyChangesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="APPLY CHANGES"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Button
            android:id="@+id/restoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="RESTORE SETTINGS"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>