<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".SingleMathGameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/aldrich"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/remainTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="@string/remainTime"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/remainTime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/aldrich"
            android:text="0"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/generic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:ems="4"
            android:fontFamily="@font/aldrich"
            android:inputType="textPersonName|number|numberDecimal"
            android:maxLength="8"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textColorLink="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/generic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:ems="4"
            android:fontFamily="@font/aldrich"
            android:inputType="number|numberDecimal"
            android:maxLength="8"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/generic3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:ems="4"
            android:fontFamily="@font/aldrich"
            android:inputType="number"
            android:maxLength="8"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/key_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/play_again"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/key_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>

</android.support.constraint.ConstraintLayout>