<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiMathGameActivity">

    <LinearLayout
        android:id="@+id/score_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/remainTime"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/remain_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="60"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fromName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="playerFromScore"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/fromScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aldrich"
                    android:textAlignment="center"
                    android:textColor="@color/ic_launcher_background"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aldrich"
                    android:text="playerToScore"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/toScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aldrich"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/from_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/ic_launcher_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_table">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/from_side"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="playerFrom"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <EditText
                android:id="@+id/fromGeneric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="textPersonName|number|numberDecimal"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.51" />

            <TextView
                android:id="@+id/fromPointer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/fromGeneric2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="number|numberDecimal"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/fromGeneric3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="number"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/to_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/to_side"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="playerTo"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <EditText
                android:id="@+id/toGeneric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="textPersonName|number|numberDecimal"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.51" />

            <TextView
                android:id="@+id/toPointer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/toGeneric2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="number|numberDecimal"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/equal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/toGeneric3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:ems="4"
                android:fontFamily="@font/aldrich"
                android:inputType="number"
                android:maxLength="8"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/keypad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:text="OK"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
</android.support.constraint.ConstraintLayout>